--- a/lithubs/templates/lithubs/repository_create_form.html
+++ b/lithubs/templates/lithubs/repository_create_form.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="form-floating">
-      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px;"type="text" name="title" class=" login-register-form-input" id="floatingInput" placeholder="title">
+      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px; width: 100%;"type="text" name="title" class=" login-register-form-input" id="floatingInput" placeholder="title">
       <label style="color:white;"class="login-register-form-label"></label>
     </div>
 
@@ -34,7 +34,7 @@
     </div>
 
     <div class="form-floating">
-      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px; height: 300px; width: 600px;"type="text" name="synopsis" class=" login-register-form-input" id="floatingInput" placeholder="synopsis">
+      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px; height: 300px; width: 100%;"type="text" name="synopsis" class=" login-register-form-input" id="floatingInput" placeholder="synopsis">
       <label style="color:white;"class="login-register-form-label"></label>
     </div>
 
@@ -47,7 +47,7 @@
     </div>
 
     <div class="form-floating">
-      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px;"type="text" name="genre" class=" login-register-form-input" id="floatingInput" placeholder="genre">
+      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px; width: 100%"type="text" name="genre" class=" login-register-form-input" id="floatingInput" placeholder="genre">
       <label style="color:white;"class="login-register-form-label"></label>
     </div>
 
@@ -73,7 +73,7 @@
     </div>
 
     <div class="form-floating">
-      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px; height: 600px; width: 600px;"type="text" name="body" class=" login-register-form-input" id="floatingInput" placeholder="body">
+      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px; height: 600px; width: 100%;"type="text" name="body" class=" login-register-form-input" id="floatingInput" placeholder="body">
       <label style="color:white;"class="login-register-form-label"></label>
     </div>
 
