--- a/lithubs/templates/lithubs/room_form.html
+++ b/lithubs/templates/lithubs/room_form.html
@@ -25,13 +25,13 @@
     </div>
 
     <div class="form-floating">
-      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px; height: 300px; width: 600px;"type="text" name="topic" class=" login-register-form-input" id="floatingInput" placeholder="topic">
+      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px;"type="text" name="topic" class=" login-register-form-input" id="floatingInput" placeholder="topic">
       <label style="color:white;"class="login-register-form-label"></label>
     </div>
 
     </div>
     
-    <div class="name">
+    <div class="create-title-grid">
 
     <div>
       <p>name *</p>
@@ -51,7 +51,7 @@
     </div>
 
     <div class="form-floating">
-      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px;"type="text" name="description" class=" login-register-form-input" id="floatingInput" placeholder="description">
+      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px; width: 100%; height: 300px;"type="text" name="description" class=" login-register-form-input" id="floatingInput" placeholder="description">
       <label style="color:white;"class="login-register-form-label"></label>
     </div>
 
