--- a/lithubs/templates/lithubs/discussion.html
+++ b/lithubs/templates/lithubs/discussion.html
@@ -14,6 +14,7 @@
   <div class="browse-container">
     <p class="browse-paragraph">Browse</p>
     <a class="browse-topic-name" style="display:block;" href="{% url 'lithubs:discussion' %}">All</a>
+    <hr>
     {% for topic in topics %}
     <a class="browse-topic-name" href="{% url 'lithubs:discussion' %}?q={{ topic.name }}">{{ topic.name }}</a>
     <hr>
@@ -21,7 +22,7 @@
   </div>
 
   <div style="width: 90%; margin:0 auto;"class="">
-    <button class="discussion-create-btn"><a href="{% url 'lithubs:create-room' %}">Post</a></button>
+    <button class="discussion-create-btn" style="float: right; margin-top:-5%"><a style="float:right;"href="{% url 'lithubs:create-room' %}">Post</a></button>
     {% for room in rooms %}
       <div class="discussion-feed-container">
 	<img class="discussion-avatar" src="{% static 'lithubs/img/franklin.jpg' %}">
@@ -30,21 +31,24 @@
         <p class="discussion-synopsis">{{ room.description }}</p>
 	
 	<div class="discussion-topic-grid">
-		<div>
-        <p>🟠 {{ room.topic }}</p>
-	<a href="{% url 'lithubs:update-room' room.id %}">Edit</a>
-	<a href="{% url 'lithubs:delete-room' room.id %}">Delete</a>
-		</div>
-		<div>
-        <p>{{ room.updated|timesince }} ago</p>
-		</div>
+	  <div>
+            <p>🟠 {{ room.topic }}</p>
+	    <a href="{% url 'lithubs:update-room' room.id %}"><i style="color: white; padding: 5px;" class="fa fa-pen"></i></a>
+	    <a href="{% url 'lithubs:delete-room' room.id %}"><i style="color: white; padding: 5px;" class="fa fa-trash"></i></a>
+	  </div>
+
+	  <div>
+	    <p>{{ room.updated|timesince }} ago</p>
+	  </div>
+
 	</div>
+
       </div>
     {% endfor %}
   </div>
 
   <div>
-    <p style="text-align: center;">Activity</p>
+    <p class="discussion-activity-paragraph" style="text-align: center;">Activity</p>
   </div>
 
 </div>
