--- a/lithubs/templates/lithubs/navbar.html
+++ b/lithubs/templates/lithubs/navbar.html
@@ -43,6 +43,9 @@
 	 <a href="{% url 'lithubs:explore' %}"class="nav-link" style='color:white'>Explore</a>
         </li>
 	{% endif %}
+      <form class="d-flex" role="search" method="GET" action="{% url 'lithubs:discussion' %}">
+        <input class="form-control me-2" type="text" name="q" placeholder="Search" aria-label="Search">
+      </form>
       </ul>
     </div>
   </div>
