--- a/lithubs/templates/lithubs/room.html
+++ b/lithubs/templates/lithubs/room.html
@@ -1,7 +1,44 @@
 {% extends 'lithubs/main.html' %}
-
+{% load static %}
 {% block content %}
 
-<h1>{{ room.name }}</h1>
+<div class="room-wrapper">
+  <div class="room-host-container">
+    <h1 class="room-name">{{ room.name }}</h1>
+    <span><img class="room-avatar-img" src="{% static 'lithubs/img/franklin.jpg' %}"></span>
+    <span class="room-host-name">@{{ room.host }}</span>
+    <span class="room-created">{{ room.created|timesince }} ago</span>
+    <p class="room-description">{{ room.description }}</p>
+    <p class="room-topic">{{ room.topic }}</p>
+
+    <div class="room-conversation-container">
+      <p>Conversation</p>
+      {% for message in room_messages %}
+      <span><img class="room-avatar-img" src="{% static 'lithubs/img/franklin.jpg' %}"></span>
+      <div class="room-vl"></div>
+      <span class="room-message-host">@{{ message.user }}</span>
+      <span class="room-created">{{ message.created|timesince }} ago</span>
+      <p class="room-message">{{ message }}</p>
+      {% endfor %}
+    </div>
+
+    <div class="room-form-wrapper">
+       {% if user.is_authenticated %}
+       <form class="room-form" method='POST' action="">
+         {% csrf_token %} 
+	 <div>
+	  <input class="room-form-input" type="text" name="body" placeholder="Messaage">
+	 </div>
+      </form>
+      {% endif %}
+    </div>
+
+  </div>
+
+  <div class="partcipants-container">
+    <p class="participants-header">Participants</p>
+  </div>
+
+</div>
 
 {% endblock content %}
