--- a/lithubs/templates/lithubs/profile.html
+++ b/lithubs/templates/lithubs/profile.html
@@ -5,8 +5,8 @@
 
 <div class="profile-wrapper">
 	<div class="profile-img-wrapper">
-	  <img class="profile-img" src="{% static 'lithubs/img/franklin.jpg' %}" alt="avatar">
-	  <h1 class="profile-name">{{ user.username }}</h1>
+	  <img class="profile-img" src="{% static 'lithubs/img/franklin_and_bruce.jpeg' %}" alt="avatar">
+	  <h1 class="profile-name" onClick="onChange()">{{ user.username }}</h1>
 	</div>
 	
 	{% include 'lithubs/repository_feed_component.html' %}	
