--- a/lithubs/templates/lithubs/room_form.html
+++ b/lithubs/templates/lithubs/room_form.html
@@ -4,7 +4,7 @@
   <form class="create-repo-form"  method="POST" action="">
     {% csrf_token %}
 
-    <div class="create-title-grid">
+<!--    <div class="create-title-grid">
 
     <div>
       <p>Host *</p>
@@ -15,7 +15,7 @@
       <label style="color:white;"class="login-register-form-label"></label>
     </div>
 
-    </div>
+</div>-->
     <!-- end create-title-grid div -->
 
     <div class="create-title-grid">
