--- a/lithubs/templates/lithubs/navbar.html
+++ b/lithubs/templates/lithubs/navbar.html
@@ -21,7 +21,7 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-		  <img class="nav-profile-img" src="{% static 'lithubs/img/franklin.jpg' %}">
+		  <img class="nav-profile-img" src="{% static 'lithubs/img/franklin_and_bruce.jpeg' %}">
           </a>
           <ul class="dropdown-menu" style="background-color: #222831; color:white;">
 	    <li><a style="color: var(--secondary-color)" class="dropdown-item" href="{% url 'lithubs:profile' user.id %}">your profile</a></li>
@@ -34,13 +34,16 @@
 
 	{% else %}
         <li class="nav-item">
-	  <a href="{% url 'lithubs:register' %}" class="nav-link" style='color:white'>Sign up</a>
+	  <a href="{% url 'lithubs:register' %}" class="nav-link" style='color:white'>Sign up |</a>
         </li>
         <li class="nav-item">
-		<a href="{% url 'lithubs:login' %}"class="nav-link" style='color:white'>Login</a>
+		<a href="{% url 'lithubs:login' %}"class="nav-link" style='color:white'>Login |</a>
         </li>
         <li class="nav-item">
-	 <a href="{% url 'lithubs:explore' %}"class="nav-link" style='color:white'>Explore</a>
+	 <a href="{% url 'lithubs:explore' %}"class="nav-link" style='color:white'>Explore |</a>
+        </li>
+        <li class="nav-item">
+	 <a href="{% url 'lithubs:discussion' %}"class="nav-link" style='color:white'>Discussion |</a>
         </li>
 	{% endif %}
       <form class="d-flex" role="search" method="GET" action="{% url 'lithubs:discussion' %}">
