--- a/lithubs/templates/lithubs/room.html
+++ b/lithubs/templates/lithubs/room.html
@@ -5,8 +5,8 @@
 <div class="room-wrapper">
   <div class="room-host-container">
     <h1 class="room-name">{{ room.name }}</h1>
-    <span><img class="room-avatar-img" src="{% static 'lithubs/img/franklin.jpg' %}"></span>
-    <span class="room-host-name">@{{ room.host }}</span>
+    <span><img class="room-avatar-img" src="{% static 'lithubs/img/franklin_and_bruce.jpeg' %}"></span>
+    <span class="room-host-name"><a style="color: var(--secondary-color); text-decoration:none;" href="{% url 'lithubs:profile' user.id %}">@{{ room.host }}</a></span>
     <span class="room-created">{{ room.created|timesince }} ago</span>
     <p class="room-description">{{ room.description }}</p>
     <p class="room-topic">{{ room.topic }}</p>
@@ -14,11 +14,14 @@
     <div class="room-conversation-container">
       <p>Conversation</p>
       {% for message in room_messages %}
-      <span><img class="room-avatar-img" src="{% static 'lithubs/img/franklin.jpg' %}"></span>
+      <span><img class="room-avatar-img" src="{% static 'lithubs/img/franklin_and_bruce.jpeg' %}"></span>
       <div class="room-vl"></div>
-      <span class="room-message-host">@{{ message.user }}</span>
+      <span class="room-message-host"><a style="color: var(--secondary-color); text-decoration: none;" href="{% url 'lithubs:profile' user.id %}">@{{ message.user }}</a></span>
       <span class="room-created">{{ message.created|timesince }} ago</span>
       <p class="room-message">{{ message }}</p>
+      {% if request.user == message.user %}
+      <a style="display:block;"href="{% url 'lithubs:delete-message' message.id %}"><i class="fa fa-trash message-trash-icon"></i></a>
+      {% endif %}
       {% endfor %}
     </div>
 
@@ -37,6 +40,11 @@
 
   <div class="partcipants-container">
     <p class="participants-header">Participants</p>
+    <div class="participants-box">
+    {% for user in participants %}
+      <p class="participants-name">@{{ user.username }}</p>
+    {% endfor %}
+    </div>
   </div>
 
 </div>
