--- a/lithubs/templates/lithubs/discussion.html
+++ b/lithubs/templates/lithubs/discussion.html
@@ -29,7 +29,7 @@
     {% for room in rooms %}
       <div class="discussion-feed-container">
 	      <span><img class="discussion-avatar" src="{{ room.host.avatar.url }}"></span>
-	<span class="discussion-feed-host"><a style="color: var(--secondary-color);" href="{% url 'lithubs:profile' user.id %}">@{{ room.host }}</a></span>
+	<span class="discussion-feed-host"><a style="color: var(--secondary-color);" href="{% url 'lithubs:profile' user.id %}">@{{ room.host.username }}</a></span>
         <a class="discussion-room-name" href="{% url 'lithubs:room' room.id %}">{{ room.name }}</a>
         <p class="discussion-description">{{ room.description }}</p>
 	
@@ -56,7 +56,7 @@
     {% for message in room_messages %}
       <div class="partcipants-details">
 	      <span><img class="activity-avatar" src="{{ user.avatar.url }}"></span>
-        <span><a href="{% url 'lithubs:profile' user.id %}"class="participants-name">@{{ message.user }}</a></span>
+        <span><a href="{% url 'lithubs:profile' user.id %}"class="participants-name">@{{ message.user.username }}</a></span>
 	<span class="activity-created">{{ message.created|timesince }} ago</span>
 	<p class="discussion-replied-to">replied to: "{{ message.room }}"</p>
 	<p class="discussion-replied-to">{{ message }}</p>
