--- a/lithubs/templates/lithubs/profile.html
+++ b/lithubs/templates/lithubs/profile.html
@@ -19,15 +19,50 @@
 	    <div class="create-title-grid">
 
 	    <div class="form-floating">
-	      <p style="color: white; font-weight:bold;font-size: 14px; width:100%;">Name</p>
-	      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px;"type="text" name="name" id="floatingInput" placeholder="">
+	      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px;"type="text" name="name" id="floatingInput" placeholder="Name">
+	      <label style="color:white;"class=""></label>
+	    </div>
+
+	    </div>
+	    
+	    <div class="create-title-grid">
+
+	    <div class="form-floating">
+	      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px;"type="text" name="username" id="floatingInput" placeholder="username">
+	      <label style="color:white;"class=""></label>
+	    </div>
+
+	    </div>
+	    
+	    <div class="create-title-grid">
+
+	    <div class="form-floating">
+	      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px;"type="text" name="email" id="floatingInput" placeholder="email">
+	      <label style="color:white;"class=""></label>
+	    </div>
+
+	    </div>
+	    
+	    <div class="create-title-grid">
+
+	    <div class="form-floating">
+	      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px; height: 150px;"type="text" name="bio" id="floatingInput" placeholder="bio">
+	      <label style="color:white;"class=""></label>
+	    </div>
+
+	    </div>
+	    
+	    <div class="create-title-grid">
+
+	    <div class="form-floating">
+	      <input style="background-color: #222831; color:white; border-radius:12px; padding: 5px;"type="file" name="avatar" id="floatingInput" placeholder="avatar">
 	      <label style="color:white;"class=""></label>
 	    </div>
 
 	    </div>
 
-	    <button style="background-color: purple;"class="w-20 login-register-from-btn" value="Submit" type="submit">Save</button>
-	    <button onClick="editHide()"style="background-color: purple;"class="w-20  login-register-from-btn" value="Submit" type="submit">Cancel</button>
+	    <button class="w-20 login-register-from-btn profile-edit-form-btn" value="Submit" type="submit">Save</button>
+	    <button onClick="editHide()" class="w-20 login-register-from-btn profile-edit-form-btn" value="" type="">Cancel</button>
 	   </form>
 	  </div>
 	  </div>
