Create Repository model

--- a/lithubs/templates/lithubs/components/navbar.html
+++ b/lithubs/templates/lithubs/components/navbar.html
@@ -14,14 +14,11 @@
         <li class="nav-item">
 	      <a class="nav-link active" aria-current="page" href="{% url 'lithubs:signout' %}">Sign out</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <img class="nav-avatar" src="{{ user.avatar.url}}" alt="">
           </a>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu" style="background-color: var(--primary-color);">
             <li><a class="dropdown-item" href="#">Action</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><hr class="dropdown-divider"></li>
@@ -34,7 +31,7 @@
 	      <a class="nav-link active" aria-current="page" href="{% url 'lithubs:signin' %}">Sign in</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="{% url 'lithubs:register' %}">sign up</a>
         </li>
       {% endif %}
       <form class="d-flex" role="search">
