--- a/lithubs/templates/lithubs/components/forms/login_register.html
+++ b/lithubs/templates/lithubs/components/forms/login_register.html
@@ -3,29 +3,34 @@
 
 {% block content %}
 
+
+{% if page == 'login' %}
 <!-- Login -->
 <main class="form-signin w-100 m-auto">
   <img class="mb-4 login-register-form-icon" src="{% static 'lithubs/img/parchment.png' %}" alt="" width="72" height="57">
   <form class="login-register-form" method="POST" action="">
     {% csrf_token %}
     <div class="form-floating">
-      <input style="background-color: #222831; color:white;"type="text" name="email" class="form-control login-register-form-input" id="floatingInput" placeholder="name@example.com">
+      <input style="background-color: #222831; color:white;"type="text" name="email" class="form-control l    path('signout', views.logout_user, name = 'signout')ogin-register-form-input" id="floatingInput" placeholder="name@example.com">
       <label style="color:white;"class="login-register-form-label" for="floatingInput">email</label>
     </div>
     <div class="form-floating">
       <input style="background-color: #222831; color:white;"type="password" name="password" class="form-control login-register-form-input" id="floatingPassword" placeholder="Password">
       <label style="color:white;" class="login-register-form-label"for="floatingPassword">password</label>
     </div>
-    <button style="background-color: purple;"class="w-100 btn btn-lg btn-primary login-register-from-btn" value="Login" type="submit">Login</button>
+    <button style="background-color: purple;"class="w-100 btn btn-lg btn-primary login-register-from-btn" value="Login" type="submit">Sign in</button>
     <p style="text-align:center; color: white; margin-top: 2%;">Haven't signed up yet?</p>
-    <a style="margin-left: 40%; text-decoration: none; color: white;" href="">Sign up</a>
+    <a style="margin-left: 40%; text-decoration: none; color: white;" href="{% url 'lithubs:register' %}">Sign up</a>
     <p style="color:white;" id="date" class="mt-5 mb-3"></p>
   </form>
 </main>
 
+{% else %}
 
 <!-- Register -->
-  <!--<form style="color:white;"class="login-register-form" method="POST" action="">
+<img class="mb-4 login-register-form-icon" src="{% static 'lithubs/img/parchment.png' %}" alt="" width="72" height="57">
+  <form style="color:white;"class="login-register-form" method="POST" action="">
+    {% csrf_token %}
     <div class="form-floating">
       <input style="background-color: #222831; color:white;"type="text" name="name" class="form-control login-register-form-input" id="floatingInput" placeholder="Name">
       <label style="color:white;"class="login-register-form-label" for="floatingInput">name</label>
@@ -48,8 +53,10 @@
     </div>
     <button style="background-color: purple;"class="w-100 btn btn-lg btn-primary login-register-from-btn" value="Register" type="submit">Sign up</button>
     <p style="text-align:center; color: white; margin-top: 2%;">Already have an account?</p>
-    <a style="margin-left: 40%; text-decoration: none; color: white;" href="">Login</a>
+    <a style="margin-left: 40%; text-decoration: none; color: white;" href="{% url 'lithubs:signin' %}">Sign in</a>
     <p style="color:white;" id="date" class="mt-5 mb-3"></p>
   </form>
+
+  {% endif %}
 
 {% endblock content %}
